[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"]}

[[bin]]
name = "rcheck"
path = "src/rcheck.rs"

[[bin]]
name = "rclippy"
path = "src/rclippy.rs"

