[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
serde = { version = "1.0.159", features = ["derive"] }
toml = "0.7.3"

[[bin]]
name = "rcheck"
path = "src/rcheck.rs"

[[bin]]
name = "rclippy"
path = "src/rclippy.rs"

